--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Just the Docs
-description: A Jekyll theme for documentation
+title: Integrated Planning Strategies - Catalogue
+description: A Catalogue for integrated planning strategies and components
 baseurl: "/ips-catalogue" # the subpath of your site, e.g. /blog
 url: "https://infar-buw.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -39,14 +39,14 @@ aux_links:
     - "//github.com/infar-buw/ips-catalogue"
 
 # Footer content appears at the bottom of every page's main content
-footer_content: "Copyright &copy; 2017-2019 Patrick Marsceill. Distributed by an <a href=\"https://github.com/infar-buw/ips-catalogue/tree/master/LICENSE.txt\">MIT license.</a>"
+footer_content: "Copyright &copy; 2020 Integrated Infrastructure - ECL-AA - InfAR Bauhaus-Universität Weimar. Distributed by an <a href=\"https://github.com/infar-buw/ips-catalogue/tree/master/LICENSE.txt\">MIT license.</a>"
 
 # Color scheme currently only supports "dark" or nil (default)
 color_scheme: nil
 
 # Google Analytics Tracking (optional)
 # e.g, UA-1234567-89
-ga_tracking: UA-2709176-10
+#ga_tracking: UA-2709176-10
 
 plugins:
   - jekyll-seo-tag
