--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Integrated Planning Strategies - Catalogue
+title: IPS - Catalogue
 description: A Catalogue for integrated planning strategies and components
 baseurl: "/ips-catalogue" # the subpath of your site, e.g. /blog
 url: "https://infar-buw.github.io" # the base hostname & protocol for your site, e.g. http://example.com
