--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@
 
 title: Parametric Planning Catalogue
 description: A Catalogue for Integrated Planning Strategies and Modules
-baseurl: "/ips-catalogue/" # the subpath of your site, e.g. /blog
+baseurl: "/parametric-planning-catalogue/" # the subpath of your site, e.g. /blog
 url: "https://infar-buw.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
 
 # Set a path/url to a logo that will be displayed instead of the title
-#logo: "/assets/images/ips-catalogue.png"
+#logo: "/assets/images/parametric-planning-catalogue.png"
 
 # Enable or disable the site search
 search_enabled: true
@@ -35,10 +35,10 @@ search_tokenizer_separator: /[\s/]+/
 heading_anchors: true
 
 # Aux links for the upper right navigation
-github_link: "//github.com/infar-buw/ips-catalogue"
+github_link: "//github.com/infar-buw/parametric-planning-catalogue"
 
 # Footer content appears at the bottom of every page's main content
-footer_content: "Copyright &copy; 2020 DecodingSpaces - ECL-AA - InfAR Bauhaus-Universität Weimar. Distributed by an <a href=\"https://github.com/infar-buw/ips-catalogue/tree/master/LICENSE.txt\">MIT license.</a>"
+footer_content: "Copyright &copy; 2020 DecodingSpaces - ECL-AA - InfAR Bauhaus-Universität Weimar. Distributed by an <a href=\"https://github.com/infar-buw/parametric-planning-catalogue/tree/master/LICENSE.txt\">MIT license.</a>"
 
 # Color scheme currently only supports "dark" or nil (default)
 color_scheme: nil
